# systemd-watchdog-thread

./: README.md  setup.cfg
src/systemd_watchdog_thread/: __init__.py
tests/: testnotifier.py
