[metadata]
name = systemd_watchdog_thread
version = attr: systemd_watchdog_thread.__version__
author = Gerard 
author_email = gweatherby@uchc.edu 
description = Send sd_notify messages in a thread 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license 

[options]
#include_package_data = True
package_dir = 
	= src
packages = 
	systemd_watchdog_thread
install_requires =
	sdnotify

[build_ext]
debug = 0


